# aihale

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: default.yaml
scripts/: download_models.py  run_analysis.py
src/: __init__.py  main.py
src/analyzer/: __init__.py  audio_analyzer.py  highlight_judge.py  video_analyzer.py
src/clipper/: __init__.py  clip_generator.py  subtitle.py  thumbnail.py
src/engine/: __init__.py  gpu_manager.py  pipeline.py  segment.py
src/utils/: __init__.py  config.py  logger.py  video_utils.py
tests/: test_audio_analyzer.py  test_clip_generator.py  test_config.py  test_gpu_manager.py  test_highlight_judge.py  test_logger.py  test_main.py  test_pipeline.py  test_segment.py  test_thumbnail.py  test_video_analyzer.py  test_video_utils.py
